force-app/main/default/objects/DuplicateMergeAudit__c/DuplicateMergeAudit__c.object-meta.xml
<CustomObject>
    <description>Immutable audit log for every merge operation. Captures merge outcome, field overrides applied, and any error details for failed merges.</description>
    <label>Duplicate Merge Audit</label>
    <nameField>
        <label>Audit Name</label>
        <type>AutoNumber</type>
        <displayFormat>DMA-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Duplicate Merge Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>