force-app/main/default/objects/DuplicateMergeAudit__c/fields/ClusterId__c.field-meta.xml
<CustomField>
    <fullName>ClusterId__c</fullName>
    <label>Cluster ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>