force-app/main/default/objects/DuplicateMergeAudit__c/fields/FieldOverridesJSON__c.field-meta.xml
<CustomField>
    <fullName>FieldOverridesJSON__c</fullName>
    <label>Field Overrides JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>