force-app/main/default/objects/DuplicateMergeAudit__c/fields/MasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordId__c</fullName>
    <label>Master Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>