force-app/main/default/objects/DuplicateMergeAudit__c/fields/MergedBy__c.field-meta.xml
<CustomField>
    <fullName>MergedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Duplicate Merge Audits</relationshipLabel>
    <relationshipName>DuplicateMergeAudits</relationshipName>
    <type>Lookup</type>
</CustomField>