force-app/main/default/objects/DuplicateMergeAudit__c/fields/MergedDate__c.field-meta.xml
<CustomField>
    <fullName>MergedDate__c</fullName>
    <label>Merged Date</label>
    <type>DateTime</type>
</CustomField>