force-app/main/default/objects/DuplicateMergeAudit__c/fields/MergedRecordIds__c.field-meta.xml
<CustomField>
    <fullName>MergedRecordIds__c</fullName>
    <label>Merged Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>