force-app/main/default/objects/DuplicateMergeAudit__c/fields/MergeType__c.field-meta.xml
<CustomField>
    <fullName>MergeType__c</fullName>
    <label>Merge Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SameObject</fullName>
            </value>
            <value>
                <fullName>CrossObject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>